# varis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MASTER_PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  retrain.yml
data/: BRCA1_p.Arg1699Trp.json
data/validation/: BRCA1_p.Arg1699Trp_expected.json
docs/plans/: 2026-03-03-phase1-m1-implementation.md  2026-03-03-phase1-m1-ingestion-design.md  2026-03-03-phase2-m2-m3-implementation.md  2026-03-03-phase2-m2-m3-structural-analysis-design.md  2026-03-03-phase3-m4-conservation-design.md  2026-03-03-phase3-m4-implementation.md  2026-03-03-phase4-m5-implementation.md  2026-03-03-phase4-m5-ml-scoring-design.md  2026-03-03-phase5-m6-implementation.md  2026-03-03-phase5-m6-varisdb-design.md  2026-03-04-phase6-completion.md  2026-03-04-phase6-m7-evolution-design.md  2026-03-04-phase6-m7-implementation.md  2026-03-06-m7-loops2-3-design.md
notebooks/: 01_retrieving_structures.py  02_stability_calculations.py  03_building_classifier.py  04_3d_visualization.py  05_clinvar_submission.py
schema/: variant_record_schema.json
tests/: __init__.py  benchmark_variants.json  conftest.py  test_clinvar_submitter.py  test_m1_ingestion.py  test_m2_structure.py  test_m3_structural.py  test_m4_conservation.py  test_m5_scoring.py  test_m6_api.py  test_m7_evolution.py  test_phase2_integration.py  test_pipeline.py  test_variant_record.py
varis/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
varis/m1_ingestion/: README.md  __init__.py  alphafold_client.py  alphamissense_client.py  clinvar_client.py  gnomad_client.py  hgvs_parser.py  uniprot_client.py  variant_normalizer.py
varis/m2_structure/: README.md  __init__.py  alphafold_retriever.py  esmfold_predictor.py  pdb_fixer.py  structure_utils.py  structure_validator.py
varis/m3_structural_analysis/: README.md  __init__.py  biopython_contacts.py  dssp_wrapper.py  foldx_wrapper.py  (+6 more)
(+57 files in other folders)
