[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varis"
version = "1.0.0"
description = "Structural Evidence for Every Variant — A Russell Genetics Product"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Russell Genetics"}
]
keywords = ["bioinformatics", "structural-biology", "variant-interpretation", "machine-learning", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "httpx>=0.25",
    "biopython>=1.82",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ml = [
    "catboost>=1.2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "optuna>=3.4",
    "imbalanced-learn>=0.11",
]
structure = [
    "freesasa>=2.2",
    "mdanalysis>=2.6",
    "gemmi>=0.6",
    "openbabel-wheel>=3.1",
    "pdbfixer>=1.9",
    "mdtraj>=1.9",
]
platform = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "weasyprint>=60",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "ruff>=0.1",
    "mypy>=1.7",
]
all = ["varis[ml,structure,platform,dev]"]

[project.scripts]
varis = "varis.cli:main"

[tool.setuptools.packages.find]
include = ["varis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
